switch back to logs.get(list.size()-1)